--- a/buisness-tour/src/assets/css/main-view.css
+++ b/buisness-tour/src/assets/css/main-view.css
@@ -1,7 +1,10 @@
 
 .main-container {
     width: 100%;
+    position: relative;
 }
+
+/* title-block styling */
 
 .title-block-container {
     padding: 60px;
@@ -9,7 +12,7 @@
     flex-direction: column;
     justify-content: end;
     width: 100%;
-    height: 733px;
+    height: 100dvh;
     background-image: url('@/assets/main-pic.jpg');
     background-size: cover;
 }
@@ -44,6 +47,8 @@
     font-style: italic;
     font-weight: 100;
 }
+
+/* previous-tours-block styling */
 
 .previous-tours-block {
     display: flex;
@@ -92,4 +97,133 @@
     font-size: 72px;
     margin-bottom: 30px;
     color: #616157;
+}
+
+/* photo-gallery-block styling */
+
+.photo-gallery-block-container {
+    display: flex;
+    flex-direction: column;
+    padding: 60px;
+    background-color: #332f29;
+    position: relative;
+    height: 190dvh;
+}
+
+.main-photo-gallery-title-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 40%;
+}
+
+.main-photo-gallery-title {
+    display: flex;
+    flex-direction: row;
+    width: 65%;    
+    height: 100%;
+
+    gap: 30px;
+}
+
+.main-photo-gallery-title img {
+    object-fit: cover;
+    width: 50%;
+}
+
+.main-pg-title-title-container {
+    width: 50%;
+}
+
+.main-pg-title-title {
+    color: #a2a6a1;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 900;
+    font-size: 2vh;
+}
+
+.main-pg-title-subtitle {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
+.pg-right-column-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    margin-top: 35vh;
+    right: 14%;
+    width: 42%;
+    height: 70%;
+}
+
+.pg-right-column-container img {
+    object-fit: cover;
+    width: 90%;
+    height: 50%;
+}
+
+.pg-about-us-block {
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    padding-top: 12vh;
+}
+
+.pg-about-us-block img {
+    height: 100%;
+    width: 50%;
+    object-fit: cover;
+    
+}
+
+.pg-about-us-text-block {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pg-about-us-text-block-main-title {
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #a68053;
+}
+
+.pg-about-us-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    padding: 13px 0;
+    border-top: #a68053 2px solid;
+    border-bottom: #a68053 2px solid;
+}
+
+.pg-about-us-link {
+    text-align: center;
+    padding: 0;
+}
+
+.pg-about-us-link img {
+    width: 34px;
+    height: 32px;
+}
+
+.pg-about-us-text-block-subtitle {
+    color: #a68053;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 8px;
+    width: 80%;
+}
+
+.photo-gallery-block-container .third-pic {
+    width: 28dvw;
+    height: 28vw;
+    object-fit: cover;
+    margin-left: 8%;
+    margin-top: 5%;
+    border: 16px #a68053 solid;
 }
