--- a/buisness-tour/src/assets/css/main-view-css/photo-gallery-block.css
+++ b/buisness-tour/src/assets/css/main-view-css/photo-gallery-block.css
@@ -1,104 +1,3 @@
-
-.main-container {
-    width: 100%;
-    position: relative;
-}
-
-/* title-block styling */
-
-.title-block-container {
-    padding: 60px;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    width: 100%;
-    height: 100dvh;
-    background-image: url('@/assets/main-pic.jpg');
-    background-size: cover;
-}
-
-#main-pic {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.main-title-container {
-    position: absolute;
-    z-index: 5;
-
-    border: 5px white solid;
-    padding: 40px;
-    padding-bottom: 70px;
-}
-
-.main-title-title {
-    font-family: 'Black Han Sans', sans-serif;
-    font-weight: 900;
-    font-size: 96px;
-    color: white;
-    line-height: 80px;
-}
-
-.main-title-subtitle {
-    color: white;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 30px;
-    font-style: italic;
-    font-weight: 100;
-}
-
-/* previous-tours-block styling */
-
-.previous-tours-block {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 60px;
-    background-color: #d9d9d9;
-}
-
-.previous-tours-container {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
-.previous-tour-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    width: 100%;
-    padding: 20px;
-}
-
-.previous-tour-card img {
-    object-fit: cover;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.previous-tour-card-date {
-    font-size: 14px;
-    opacity: 0.3;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-}
-
-.previous-tour-card-title {
-    color: black;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-.previous-tours-title {
-    font-family: 'PT Sans', sans-serif;
-    font-weight: 900;
-    font-size: 72px;
-    margin-bottom: 30px;
-    color: #616157;
-}
-
 /* photo-gallery-block styling */
 
 .photo-gallery-block-container {
@@ -139,12 +38,13 @@
     color: #a2a6a1;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 900;
-    font-size: 2vh;
+    font-size: 3vw;
 }
 
 .main-pg-title-subtitle {
     color: white;
     font-family: 'Roboto', sans-serif;
+    font-size: 3vh;
 }
 
 .pg-right-column-container {
