--- a/buisness-tour/src/assets/main.css
+++ b/buisness-tour/src/assets/main.css
@@ -1,5 +1,8 @@
 @import './base.css';
-@import './css/main-view.css';
+@import './css/main-view-css/main-view.css';
+
+body {
+}
 
 #app {
   margin: 0 auto;
@@ -7,7 +10,6 @@
   width: 100%;
 }
 
-a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
