made all of block

--- a/buisness-tour/src/assets/css/main-view-css/main-view.css
+++ b/buisness-tour/src/assets/css/main-view-css/main-view.css
@@ -4,6 +4,7 @@
 @import './photo-tours-block.css';
 @import './travel-to-east-block.css';
 @import './master-photo-block.css';
+@import './about-us-block.css';
 
 .main-container {
     width: 100%;
