adapted first two block for mobile phones

--- a/src/assets/css/main-view-css/photo-gallery-block.css
+++ b/src/assets/css/main-view-css/photo-gallery-block.css
@@ -7,6 +7,7 @@
     background-color: #332f29;
     position: relative;
     height: 190dvh;
+    max-width: 100%;
 }
 
 .main-photo-gallery-title-container {
