--- a/src/assets/css/main-view-css/about-us-block.css
+++ b/src/assets/css/main-view-css/about-us-block.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
+    max-width: 100%;
 }
 
 .about-us-block-container img {
