--- a/src/assets/css/main-view-css/master-photo-block.css
+++ b/src/assets/css/main-view-css/master-photo-block.css
@@ -1,10 +1,11 @@
 .master-photo-block-container {
-    width: 100%;
+    max-width: 100%;
     position: relative;
     padding: 60px 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .master-photo-grey-bg {
