--- a/src/assets/css/main-view-css/photo-tours-block.css
+++ b/src/assets/css/main-view-css/photo-tours-block.css
@@ -1,7 +1,7 @@
 /* photo-tours-block styling */
 
 .photo-tours-block-container {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
