--- a/src/assets/css/main-view-css/previous-tours-block.css
+++ b/src/assets/css/main-view-css/previous-tours-block.css
@@ -6,12 +6,20 @@
     flex-direction: column;
     align-items: center;
     padding: 60px;
+    max-width: 100%;
     background-color: #d9d9d9;
+}
+
+.prev-tours-cards-container {
+    width: 100%;
+    height: 30%;
 }
 
 .previous-tours-container {
     display: flex;
     flex-direction: row;
+    max-width: 300%;
+    height: 100%;
     gap: 20px;
 }
 
@@ -47,5 +55,20 @@
     font-weight: 900;
     font-size: 72px;
     margin-bottom: 30px;
+    text-align: center;
     color: #616157;
+}
+
+@media only screen and (max-width: 700px) {
+    .previous-tour-card {
+        width: 180px;
+    }
+
+    .previous-tours-container {
+        width: max-content;
+    }
+
+    .prev-tours-cards-container {
+        overflow-x: scroll;
+    } 
 }
