--- a/src/assets/css/main-view-css/title-block.css
+++ b/src/assets/css/main-view-css/title-block.css
@@ -5,10 +5,11 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    width: 100%;
+    max-width: 100%;
     height: 100dvh;
     background-image: url('@/assets/main-pic.jpg');
     background-size: cover;
+    overflow-x: hidden;
 }
 
 #main-pic {
@@ -18,12 +19,14 @@
 }
 
 .main-title-container {
-    position: absolute;
     z-index: 5;
+    width: 500px;
 
     border: 5px white solid;
     padding: 40px;
     padding-bottom: 70px;
+
+    overflow: hidden;
 }
 
 .main-title-title {
@@ -32,6 +35,7 @@
     font-size: 96px;
     color: white;
     line-height: 80px;
+    margin: 0;
 }
 
 .main-title-subtitle {
@@ -40,4 +44,15 @@
     font-size: 30px;
     font-style: italic;
     font-weight: 100;
+}
+
+@media only screen and (max-width: 730px) {
+    .main-title-container {
+        width: auto;
+        padding: 15px;
+    }
+
+    .main-title-title {
+        font-size: 11vw;
+    }
 }
