--- a/src/assets/css/main-view-css/travel-to-east-block.css
+++ b/src/assets/css/main-view-css/travel-to-east-block.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     gap: 50px;
-    width: 100%;
+    max-width: 100%;
     padding: 60px;
     background-color: #d9d9d9;
     overflow: hidden;
