--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,9 +5,16 @@ body {
 }
 
 #app {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+@media only screen and (max-width: 730px) {
 }
 
 .green {
