--- a/src/assets/css/main-view-css/about-us-block.css
+++ b/src/assets/css/main-view-css/about-us-block.css
@@ -3,7 +3,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
-    max-width: 100%;
+
+    min-width: 100%;
 }
 
 .about-us-block-container img {
@@ -20,6 +21,7 @@
 .about-us-block-container .text-block {
     padding: 140px 50px;
     display: flex;
+    height: auto;
     flex-direction: column;
     align-items: center;
 }
@@ -63,4 +65,21 @@
     fill: white;
     width: 20px;
     height: 20px;
+}
+
+@media only screen and (max-width: 700px) {
+    .about-us-block-container {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: auto;
+    }
+
+    .about-us-block-container img {
+        height: 400px;
+    }
+
+    .about-us-block-container .text-block {
+        height: auto;
+        padding: 50px;
+    }
 }
