--- a/src/assets/css/main-view-css/master-photo-block.css
+++ b/src/assets/css/main-view-css/master-photo-block.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .master-photo-grey-bg {
@@ -69,4 +69,25 @@
 .master-photo-block-container .text-block a:hover {
     border-bottom: none;
     letter-spacing: 5px;
+}
+
+@media only screen and (max-width: 700px) {
+    .master-photo-block-container .text-block{
+        position: unset;
+        width: 100%;
+        height: auto;
+    }
+
+    .master-photo-grey-bg {
+        display: none;
+    }
+
+    .master-photo-cream-bg {
+        width: 100%;
+    }
+
+    .master-photo-block-container img {
+        width: 80%;
+
+    }
 }
