--- a/src/assets/css/main-view-css/photo-gallery-block.css
+++ b/src/assets/css/main-view-css/photo-gallery-block.css
@@ -3,7 +3,7 @@
 .photo-gallery-block-container {
     display: flex;
     flex-direction: column;
-    padding: 60px;
+    padding: 6%;
     background-color: #332f29;
     position: relative;
     height: 190dvh;
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     height: 40%;
+    order: 0;
 }
 
 .main-photo-gallery-title {
@@ -45,7 +46,7 @@
 .main-pg-title-subtitle {
     color: white;
     font-family: 'Roboto', sans-serif;
-    font-size: 3vh;
+    font-size: 18px;
 }
 
 .pg-right-column-container {
@@ -53,6 +54,7 @@
     flex-direction: column;
     position: absolute;
     margin-top: 35vh;
+    order: 2;
     right: 14%;
     width: 42%;
     height: 70%;
@@ -68,6 +70,7 @@
     height: 50%;
     display: flex;
     flex-direction: row;
+    gap: 20px;
     padding-top: 12vh;
 }
 
@@ -95,15 +98,19 @@
     display: flex;
     flex-direction: row;
     gap: 13px;
-    width: auto;
+    max-width: 80%;
     padding: 13px 20px;
     border-top: #a68053 2px solid;
     border-bottom: #a68053 2px solid;
 }
 
+.pg-about-us-text-block .pg-about-us-links a {
+    width: 20%;
+}
+
 .pg-about-us-text-block .pg-about-us-links svg {
-    width: 30px;
-    height: 30px;
+    width: 100%;
+    height: 100%;
 }
 
 .pg-about-us-text-block-subtitle {
@@ -122,4 +129,66 @@
     margin-left: 8%;
     margin-top: 5%;
     border: 16px #a68053 solid;
+    order: 3;
+}
+
+@media only screen and (max-width: 700px) {
+    .pg-right-column-container {
+        position: unset;
+        margin-top: 40px;
+        width: 70%;
+    }
+
+    .pg-second-pic {
+        min-width: 100%;
+    }
+
+    .photo-gallery-block-container {
+        height: auto;
+        align-items: center;
+    }
+
+    .main-photo-gallery-title img {
+        order: 1;
+        width: 100%;
+        height: 60%;
+    }
+
+    .main-pg-title-title {
+        font-size: 30px;
+    }
+
+    .main-pg-title-title-container {
+        width: 100%;
+        height: 40%;
+    }
+
+    .main-photo-gallery-title {
+        flex-direction: column;
+        height: 500px;
+    }
+
+
+    .pg-about-us-block {
+        padding: 0;
+        margin-top: 20px;
+        height: 200px;
+    }
+
+    .pg-about-us-text-block-main-title {
+        font-size: 16px;
+    }
+
+    .pg-about-us-text-block .pg-about-us-links {
+        gap: 7px;
+        padding: 3px 4px;
+    }
+
+    .pg-about-us-text-block-subtitle {
+        font-size: 12px;
+    }
+
+    .photo-gallery-block-container .third-pic {
+        width: 80%;
+    }
 }
