--- a/src/assets/css/main-view-css/photo-tours-block.css
+++ b/src/assets/css/main-view-css/photo-tours-block.css
@@ -2,12 +2,14 @@
 
 .photo-tours-block-container {
     max-width: 100%;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 50px;
     padding: 60px;
     padding-bottom: 140px;
+    position: relative;
 }
 
 .photo-tours-block-container .column {
@@ -65,6 +67,28 @@
     height: 280px;
     z-index: -1;
     margin-top: 150px;
+    left: 0;
     width: 90%;
     background-color: #a68053;
+}
+
+@media only screen and (max-width: 700px) {
+    .photo-tours-block-container {
+        flex-direction: column;
+    }
+
+    .photo-tours-block-container .column {
+        max-width: 100%;
+        height: 100%;
+    }
+
+    .bg {
+        width: 100%;
+        margin-top: 520px;
+        top: 0;
+    }
+
+    .pt-rc-img {
+        position: unset;
+    }
 }
