--- a/src/assets/css/main-view-css/previous-tours-block.css
+++ b/src/assets/css/main-view-css/previous-tours-block.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px;
+    padding: 6%;
     max-width: 100%;
     background-color: #d9d9d9;
 }
@@ -35,6 +35,7 @@
 .previous-tour-card img {
     object-fit: cover;
     width: 100%;
+    height: 65%;
     margin-bottom: 10px;
 }
 
