--- a/src/assets/css/main-view-css/title-block.css
+++ b/src/assets/css/main-view-css/title-block.css
@@ -1,7 +1,7 @@
 /* title-block styling */
 
 .title-block-container {
-    padding: 60px;
+    padding: 6%;
     display: flex;
     flex-direction: column;
     justify-content: end;
