--- a/src/assets/css/main-view-css/travel-to-east-block.css
+++ b/src/assets/css/main-view-css/travel-to-east-block.css
@@ -28,6 +28,7 @@
     height: 800px;
 }
 
+
 .travel-to-east-block-container .column img{
     width: 100%;
     object-fit: cover;
@@ -73,5 +74,25 @@
 
 .lc-text-block-container a:hover {
     border-bottom: none;
+}
+
+@media only screen and (max-width: 700px) {
+    .travel-to-east-block-container {
+        flex-direction: column;
+        justify-content: unset;
+        gap: 50px;
+        max-width: 100%;
+        padding: 6%;
+        background-color: #d9d9d9;
+        overflow: hidden;
+    }
+
+    .travel-to-east-rc {
+        max-height: 600px;
+    }
+
+    .travel-to-east-rc img {
+        height: 600px;
+    }
 }
 
