--- a/src/assets/css/main-view-css/about-us-block.css
+++ b/src/assets/css/main-view-css/about-us-block.css
@@ -1,85 +1,82 @@
 .about-us-block-container {
-    height: 546px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    text-align: center;
+  height: 546px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
 
-    min-width: 100%;
+  min-width: 100%;
+  overflow: hidden;
 }
 
 .about-us-block-container img {
-    object-fit: cover;
-    width: 100%;    
-    height: 100%;
-}
-
-.about-us-block-container div {
-    background-color: #959e8c;
-    height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .about-us-block-container .text-block {
-    padding: 140px 50px;
-    display: flex;
-    height: auto;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 50px;
+  background-color: #959e8c;
 }
 
 .about-us-block-container .text-block h3 {
-    font-size: 16px;
-    font-family: 'Roboto Condensed', sans-serif;
-    color: white;
-    letter-spacing: 1px;
-    font-weight: 100;
-    margin-bottom: 20px;
+  font-size: 16px;
+  font-family: 'Roboto Condensed', sans-serif;
+  color: white;
+  letter-spacing: 1px;
+  font-weight: 100;
+  margin-bottom: 20px;
 }
 
 .about-us-block-container .text-block h1 {
-    text-transform: uppercase;
-    color: #ccd4c4;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 30px;
-    margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #ccd4c4;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .about-us-block-container .text-block p {
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    margin-bottom: 50px;
-    
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
 .about-us-block-container .text-block .pg-about-us-links {
-    height: 40px;
-    gap: 29px;
-    padding: 0;
-    border: 0;
-    width: auto;
-    height: auto;
-    display: flex;
+  height: 40px;
+  gap: 29px;
+  padding: 0;
+  border: 0;
+  width: auto;
+  height: auto;
+  display: flex;
 }
 
-.about-us-block-container .text-block .pg-about-us-links svg{
-    fill: white;
-    width: 20px;
-    height: 20px;
+.about-us-block-container .text-block .pg-about-us-links svg {
+  fill: white;
+  width: 20px;
+  height: 20px;
 }
 
 @media only screen and (max-width: 700px) {
-    .about-us-block-container {
-        display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-template-columns: auto;
-    }
+  .about-us-block-container {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: auto;
+    height: auto;
+  }
 
-    .about-us-block-container img {
-        height: 400px;
-    }
+  .about-us-block-container img {
+    height: 400px;
+  }
 
-    .about-us-block-container .text-block {
-        height: auto;
-        padding: 50px;
-    }
+  .about-us-block-container .text-block {
+    height: auto;
+    padding: 50px;
+  }
 }
