--- a/src/assets/css/main-view-css/main-view.css
+++ b/src/assets/css/main-view-css/main-view.css
@@ -5,8 +5,8 @@
 @import './travel-to-east-block.css';
 @import './master-photo-block.css';
 @import './about-us-block.css';
+@import './tour-request-block.css';
 
 .main-container {
     min-width: 100%;
-    position: relative;
 }
