--- a/src/assets/css/main-view-css/title-block.css
+++ b/src/assets/css/main-view-css/title-block.css
@@ -7,7 +7,7 @@
     justify-content: end;
     max-width: 100%;
     height: 100dvh;
-    background-image: url('@/assets/main-pic.jpg');
+    background-image: url('@/assets/main-view-pics/title-block-pics/main-pic.jpg');
     background-size: cover;
     overflow-x: hidden;
 }
