--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 @import './base.css';
-@import './css/main-view-css/main-view.css';
+@import './css/main-view.css';
 
 * {
   margin: 0;
@@ -8,9 +8,6 @@
 
 #app, html, body {
   width: 100%;
-}
-
-@media only screen and (max-width: 730px) {
 }
 
 .green {
