--- a/src/assets/css/main-view-css/photo-tours-block.css
+++ b/src/assets/css/main-view-css/photo-tours-block.css
@@ -38,12 +38,12 @@
     margin-bottom: 40px;
 }
 
-.left-column-text-block .pg-about-us-links {
+.left-column-text-block .sm-links {
     display: flex;
     gap: 16px;
 }
 
-.left-column-text-block .pg-about-us-links svg {
+.left-column-text-block .sm-links svg {
     width: 30px;
     height: 30px;
 }
