--- a/src/assets/css/main-view-css/photo-gallery-block.css
+++ b/src/assets/css/main-view-css/photo-gallery-block.css
@@ -94,9 +94,10 @@
     color: #a68053;
 }
 
-.pg-about-us-text-block .pg-about-us-links {
+.pg-about-us-text-block .sm-links {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     gap: 13px;
     max-width: 80%;
     padding: 13px 20px;
@@ -104,11 +105,11 @@
     border-bottom: #a68053 2px solid;
 }
 
-.pg-about-us-text-block .pg-about-us-links a {
+.pg-about-us-text-block .sm-links a {
     width: 20%;
 }
 
-.pg-about-us-text-block .pg-about-us-links svg {
+.pg-about-us-text-block .sm-links svg {
     width: 100%;
     height: 100%;
 }
@@ -179,7 +180,7 @@
         font-size: 16px;
     }
 
-    .pg-about-us-text-block .pg-about-us-links {
+    .pg-about-us-text-block .sm-links {
         gap: 7px;
         padding: 3px 4px;
     }
