--- a/src/assets/css/main-view-css/title-block.css
+++ b/src/assets/css/main-view-css/title-block.css
@@ -1,58 +1,115 @@
 /* title-block styling */
 
 .title-block-container {
-    padding: 6%;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    max-width: 100%;
-    height: 100dvh;
-    background-image: url('@/assets/main-view-pics/title-block-pics/main-pic.jpg');
-    background-size: cover;
-    overflow-x: hidden;
+  padding: 6%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  max-width: 100%;
+  height: 100dvh;
+  background-image: url('@/assets/main-view-pics/title-block-pics/main-pic.jpg');
+  background-size: cover;
+  overflow-x: hidden;
 }
 
 #main-pic {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .main-title-container {
-    z-index: 5;
-    width: 500px;
+  z-index: 5;
+  width: 500px;
 
-    border: 5px white solid;
-    padding: 40px;
-    padding-bottom: 70px;
+  border: 5px white solid;
+  padding: 40px;
+  padding-bottom: 70px;
 
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .main-title-title {
-    font-family: 'Black Han Sans', sans-serif;
-    font-weight: 900;
-    font-size: 46px;
-    color: white;
-    line-height: 80px;
-    margin: 0;
+  font-family: 'Black Han Sans', sans-serif;
+  font-weight: 900;
+  font-size: 46px;
+  color: white;
+  line-height: 80px;
+  margin: 0;
 }
 
 .main-title-subtitle {
-    color: white;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 30px;
-    font-style: italic;
-    font-weight: 100;
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 30px;
+  font-style: italic;
+  font-weight: 100;
+}
+
+.title-block-announcement {
+  max-height: 150px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 150px;
+  margin-right: 30px;
+
+  width: 200px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.announcement {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.announcement-icon-container {
+  width: 17%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.announcement svg {
+  width: 16px;
+  height: 16px;
+}
+
+.announcement-text {
+  width: 83%;
+}
+
+.announcement-text h1 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 20px;
+}
+
+.announcement-text p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 13px;
 }
 
 @media only screen and (max-width: 730px) {
-    .main-title-container {
-        width: auto;
-        padding: 15px;
-    }
+  .main-title-container {
+    width: auto;
+    padding: 15px;
+  }
 
-    .main-title-title {
-        font-size: 11vw;
-    }
+  .main-title-title {
+    font-size: 11vw;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .title-block-announcement {
+    left: 0;
+    margin-left: 30px;
+    margin-right: 0;
+  }
 }
