--- a/src/assets/css/main-view-css/tour-request-block.css
+++ b/src/assets/css/main-view-css/tour-request-block.css
@@ -7,6 +7,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0;
+
+  z-index: 0;
 }
 
 .tour-request-block-container h1 {
@@ -27,10 +30,17 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 260px;
 }
 
 .tour-request-block-container form input,
 .tour-request-block-container form button {
   outline: none;
   padding: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+  .tour-request-block-container form {
+    width: 80%;
+  }
 }
