--- a/src/assets/css/main-view-css/title-block.css
+++ b/src/assets/css/main-view-css/title-block.css
@@ -59,6 +59,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  z-index: 5;
 }
 
 .announcement {
@@ -79,6 +80,12 @@
 .announcement svg {
   width: 16px;
   height: 16px;
+  
+}
+
+.announcement svg circle {
+  fill: rgb(43, 255, 0);
+  
 }
 
 .announcement-text {
