--- a/src/assets/css/main-view-css/tour-request-block.css
+++ b/src/assets/css/main-view-css/tour-request-block.css
@@ -3,7 +3,7 @@
   height: auto;
   gap: 20px;
   background-color: #dfdfd6;
-  padding: 6%;
+  padding: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
