--- a/src/assets/css/layout/footer.css
+++ b/src/assets/css/layout/footer.css
@@ -51,3 +51,10 @@
 .footer-container .sm-links a {
     height: 30px;
 }
+
+@media only screen and (max-width: 700px) {
+    .footer-container {
+        flex-direction: column;
+        gap: 40px;
+    }
+}
