--- a/src/assets/css/main-view-css/previous-tours-block.css
+++ b/src/assets/css/main-view-css/previous-tours-block.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 6%;
+    padding: 60px;
     max-width: 100%;
     background-color: #d9d9d9;
 }
