--- a/src/assets/css/main-view-css/travel-to-east-block.css
+++ b/src/assets/css/main-view-css/travel-to-east-block.css
@@ -82,7 +82,7 @@
         justify-content: unset;
         gap: 50px;
         max-width: 100%;
-        padding: 6%;
+        padding: 60px;
         background-color: #d9d9d9;
         overflow: hidden;
     }
