--- a/src/assets/css/layout/footer.css
+++ b/src/assets/css/layout/footer.css
@@ -55,6 +55,7 @@
 @media only screen and (max-width: 700px) {
     .footer-container {
         flex-direction: column;
-        gap: 40px;
+        gap: 40px
+        ;
     }
 }
