--- a/src/assets/css/main-view-css/previous-tours-block.css
+++ b/src/assets/css/main-view-css/previous-tours-block.css
@@ -30,6 +30,20 @@
     background-color: white;
     width: 100%;
     padding: 20px;
+    position: relative;
+}
+
+.previous-tour-card h2 {
+    opacity: .6;
+    margin-bottom: 25px;
+}
+
+.previous-tour-card a {
+    position: absolute;
+
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .previous-tour-card img {
