--- a/src/assets/css/main-view-css/title-block.css
+++ b/src/assets/css/main-view-css/title-block.css
@@ -6,8 +6,8 @@
   flex-direction: column;
   justify-content: end;
   max-width: 100%;
-  height: 100vh;
-  background-image: url('@/assets/main-view-pics/title-block-pics/main-pic.jpg');
+  height: 80vh;
+  background-image: url('@/assets/main-view-pics/title-block-pics/main-pic1.jpg');
   background-size: cover;
   overflow-x: hidden;
 }
@@ -66,6 +66,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: relative;
+}
+
+.announcement a {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .announcement-icon-container {
