--- a/src/assets/css/main-view-css/title-block.css
+++ b/src/assets/css/main-view-css/title-block.css
@@ -119,6 +119,10 @@
   .main-title-title {
     font-size: 11vw;
   }
+
+  .title-block-container {
+    height: 100dvh;
+  }
 }
 
 @media only screen and (max-width: 550px) {
