--- a/src/assets/css/main-view-css/previous-tours-block.css
+++ b/src/assets/css/main-view-css/previous-tours-block.css
@@ -12,7 +12,8 @@
 
 .prev-tours-cards-container {
     width: 100%;
-    height: 30%;
+    max-width: 1200px;
+    height: 400px;
 }
 
 .previous-tours-container {
@@ -74,9 +75,9 @@
     color: #616157;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
     .previous-tour-card {
-        width: 180px;
+        width: 280px;
     }
 
     .previous-tours-container {
