--- a/src/assets/css/main-view.css
+++ b/src/assets/css/main-view.css
@@ -1,5 +1,5 @@
-@import './main-view-css/title-block.css';
-@import './main-view-css/previous-tours-block.css';
+@import './main-view-css/title-block.scss';
+@import './main-view-css/previous-tours-block.scss';
 @import './main-view-css/photo-gallery-block.css';
 @import './main-view-css/photo-tours-block.css';
 @import './main-view-css/travel-to-east-block.css';
