--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,10 @@
 @import './css/layout.css';
 @import "./css/tour-view.css";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
