--- a/src/assets/css/layout/navbar.scss
+++ b/src/assets/css/layout/navbar.scss
@@ -33,14 +33,11 @@
   width: 40px;
 }
 
-.navbar-title a {
-  color: black;
-  text-decoration: none;
+.navbar-title {
+  a {@apply decoration-0 text-black}
+  h1 {@apply font-extrabold font-rob text-[40px]}
 }
 
-.navbar-title h1 {
-  font-weight: 900;
-}
 .navbar-title p {
   font-weight: 500;
   font-style: italic;
